--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 	</head>
 	<body>
 		<h1>Hello, Vue :)</h1>
+		<!-- Controlled by Vue starts -->
+		<div id="app">
+			<h2>I am the template</h2>
+		</div>
+		<!-- Controlled by Vue ends -->
 		<script src="app.js"></script>
 	</body>
 </html>
