--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 		<h1>Hello, Vue :)</h1>
 		<!-- Controlled by Vue starts -->
 		<div id="app">
-			<h2>I am the template</h2>
+			<!-- A properties from app.js accessible here as a variables -->
+			<!-- We can't use them outside of the scope of #app -->
+			<p>{{ title }} - {{ author }} - {{ age }}</p>
 		</div>
 		<!-- Controlled by Vue ends -->
 		<script src="app.js"></script>
