--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
 			<!-- A properties from app.js accessible here as a variables -->
 			<!-- We can't use them outside of the scope of #app -->
 			<p>{{ title }} - {{ author }} - {{ age }}</p>
+			<!-- Click events: you can apply them below or in app.js by creating a component method -->
+			<!-- We use JS (from app.js) inside quotes  -->
+			<button v-on:click="age++">Increase age</button>
+			<button v-on:click="age--">Decrease age</button>
+			<!-- Clicking "Change title and save it" replaces a book title to "something else"-->
+			<!-- <div @click="title = 'something else'">Change title and save it</div> -->
+			<!-- Access changeTitle method from app.js which invokes changeTitle() function in app.js-->
+			<!-- You can also passing functions when we call them arguments, e.g "Oathbringer" a string argument -->
+			<div @click="changeTitle('Oathbringer')">Change title and save it</div>
 		</div>
 		<!-- Controlled by Vue ends -->
 		<script src="app.js"></script>
