--- a/index.html
+++ b/index.html
@@ -5,20 +5,38 @@
 		<title>Learning Vue</title>
 		<script src="https://unpkg.com/vue@3.0.2"></script>
 		<style>
-			.box {
-				padding: 100px 0;
-				width: 400px;
-				text-align: center;
-				background: #ddd;
-				margin: 20px;
-				display: inline-block;
+			body {
+				background: #eee;
+				max-width: 960px;
+				margin: 20px auto;
+			}
+			p,
+			h3,
+			ul {
+				margin: 0;
+				padding: 0;
+			}
+			li {
+				list-style-type: none;
+				background: #fff;
+				margin: 20px auto;
+				padding: 10px 20px;
+				border-radius: 10px;
+				display: flex;
+				align-items: center;
+				justify-content: space-between;
+			}
+			li.fav {
+				background: #ff9ed2;
+				color: white;
 			}
 		</style>
 	</head>
 	<body>
 		<h1>Hello, Vue :)</h1>
 		<!-- Notes about the lesson
-        Attribute Binding is when we bind dynamic values to html attributes
+       By "dynamic classes" we mean when we conditionally give elements certain classes based on certain conditions
+	   e.g we can evaluate 'books' arrau and give a certain class to 'book' property based on isFav property true or false value
         -->
 		<!-- Controlled by Vue starts -->
 		<div id="app">
@@ -42,7 +60,9 @@
 				<!-- Instead of the above use v-for below -->
 				<ul>
 					<!-- 'book' can be called 'item' whatever else , 'books' is a name of an array property from 'app.js'-->
-					<li v-for="book in books">
+					<!-- :class == v-bind:class -->
+					<!-- class="fav" is added only if 'is Fav' property set to true -->
+					<li v-for="book in books" :class="{fav: book.isFav  }">
 						<img :src="book.img" :alt="book.title" />
 						<h3>{{ book.title }}</h3>
 						<p>{{ book.author}}</p>
