--- a/public/index.html
+++ b/public/index.html
@@ -18,5 +18,7 @@
 		<!-- This is where a root component is going to be injected -->
 		<div id="app"></div>
 		<!-- built files will be auto injected -->
+		<!-- Teleport gives us to ...teleport components outside of app.vue -->
+		<div class="modals"></div>
 	</body>
 </html>
